--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>毛思怡圣诞节快乐！</title>
+		<title>肖芷萱圣诞节快乐！</title>
 	</head>
 	<style type="text/css">
 		* {
@@ -55,10 +55,10 @@
 			font-weight: 1200px;
 			color:  #808080;
 			text-shadow: 10px 10px 10px red;
-			animation: 毛思怡 2.5s infinite alternate;
+			animation: 肖芷萱 2.5s infinite alternate;
 		}
 
-		@keyframes 毛思怡 {
+		@keyframes 肖芷萱 {
 			from {
 				font-size: 6em;
 				color: red;
@@ -387,7 +387,7 @@
 	</style>
 	<body>
 		<div class="AA">
-			|*属于毛思怡的圣诞节礼物*|
+			|*属于肖芷萱的圣诞节礼物*|
 		</div>
 		<div class="AAA">
 			<img src="图片/pexels-koolshooters-6194089.jpg" />
@@ -402,8 +402,8 @@
 		<div class="C">
 			<div class="C-1">
 				<div class="C-2"><img src="图片/下载%20(1).png"></div>
-				<div class="C-3"><a href="#">毛思怡</a>
-					<p>小朋友圣诞节快乐！</p>
+				<div class="C-3"><a href="#">肖芷萱</a>
+					<p>圣诞节快乐！</p>
 				</div>
 				<div class="C-2"><img src="图片/下载%20(2).png"></div>
 			</div>
@@ -429,10 +429,7 @@
 				<div class="Q-1">
 					<h1>——I hope to happy,not just on chrstmas Day.——</h1>
 					<p>
-						毛思怡，圣诞节快乐！希望你在接下来日子里每天都能开开心心。你一个人在鄂州要好好照顾自己
-						，要记得晚上睡觉盖好被子，早晨醒来不要猛的坐起来会头疼，不要吃凉的辣的，对胃不好，现在天气一天比一天冷，平时出门一定要多穿一些衣服
-						，感冒了一定要吃药，每天不要熬太晚，晚上玩手机时记得把手机亮度调低些，不然对眼睛不太好
-						，还有还有就是记得一定要每天开心，一定要早睡，最后祝你快乐，不止圣诞这一天。
+						肖芷萱，圣诞节快乐！希望你在接下来日子里每天都能开开心心的！祝你快乐，不止圣诞这一天！
 					</p>
 				</div>
 			</div>
@@ -461,8 +458,9 @@
 			
 			</div>
 			<div class="qa">
-				&reg 版权所有：毛思怡
+				&reg 版权所有：肖芷萱
 			</div>
 		</div>
 	</body>
 </html>
+
